[project]
name = "workbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
  "loguru~= 0.7.3",
  "requests~=2.32.3",
  "fastavro~=1.10.0",
  "aiofiles~=24.1.0",
]

[dependency-groups]
dev = ["pytest~=8.3.4", "types-aiofiles~=24.1.0.20241221"]
lint = ["ruff~=0.8.4"]
